added crud for tables (orders,tools,details,machines)